Bug 1689317 - Clipboard events should be composed. r=smaug

Automate some of the copy event tests which tested for this, since there
seems we/WPT don't have a lot of coverage for them.

Differential Revision: https://phabricator.services.mozilla.com/D103428